@@ -2,7 +2,7 @@
 # Maintainer: Ng Oon-Ee <  n g  o o n  e e AT g m a i l DOT c o m>
 
 pkgname=eclipse-linuxtools
-pkgver=0.9.2
+pkgver=0.10
 pkgrel=1
 pkgdesc="Eclipse Linux Tools Project"
 url="http://www.eclipse.org/linuxtools"
@@ -11,7 +11,7 @@ license=('EPL')
 depends=('eclipse-cdt')
 makedepends=('unzip')
 source=("http://download.eclipse.org/technology/linuxtools/linuxtools-${pkgver}-incubation.zip")
-md5sums=('80b6a19ba2ac5b265d527587275f7d85')
+md5sums=('63a94045ae53d442b903726f4b5e388f')
 
 build() {
 
