@@ -1,20 +1,20 @@
 # Contributor: matthiaskrgr <matthiaskrgr _strange_curverd_character_ freedroid D0T org>
 
 pkgname=gource-git
-pkgver=20120412
+pkgver=20120505
 pkgrel=1
 pkgdesc="software version control visualization"
 license=('GPL3')
 arch=('i686' 'x86_64')
 url="http://code.google.com/p/gource/"
-makedepends=('git' 'autoconf' 'boost' 'glmath')
+makedepends=('git' 'autoconf' 'boost' 'glm')
 depends=('sdl_image' 'pcre' 'glew' 'boost-libs' 'freetype2' 'tinyxml')
 optdepends=('ffmpeg: to convert the ppm stream (gource -o) to a video')
 conflicts=('gource')
 provides=('gource')
 changelog=changelog
 source=('changelog')
-sha1sums=('3a8382fcb93861b15a688e374767e90d75e5f4ed')
+sha1sums=('768ccb441bd921f8a5d17c2ae49fecd5d57d06a8')
 
 _gitroot="git://github.com/acaudwell/Gource.git"
 _gitname="gource"
