@@ -1,26 +1,38 @@
+# Maintainer : SpepS <dreamspepser at yahoo dot it>
 # Contributor: Shinlun Hsieh <yngwiexx@yahoo.com.tw>
-# Maintainer: Philipp Überbacher <murks at lavabit dot com >
+# Contributor: Philipp Überbacher <murks at lavabit dot com >
+
+_name=jackEQ
 pkgname=jackeq
-_pkgname=jackEQ
 pkgver=0.5.9
-pkgrel=1
-pkgdesc="A tool for routing and manipulating audio from/to multiple input/output sources"
+pkgrel=2
+pkgdesc="A JACK Equilisation tool designed primarily for live performance/work"
 arch=('i686' 'x86_64')
 url="http://djcj.org/jackeq/"
 license=('GPL')
-depends=('gtk2' 'jack')
-makedepends=('libxml2>=2.5' 'swh-plugins>=0.4.3' 'ladspa')
-source=(http://djcj.org/jackeq/code/${_pkgname}-${pkgver}.tar.bz2)
-md5sums=('3417a59b0483232da8fff7d798919615')
+depends=('gtk2' 'jack' 'swh-plugins')
+makedepends=('libxml2' 'desktop-file-utils')
+install="$pkgname.install"
+source=("${url}code/$_name-$pkgver.tar.bz2" $pkgname.desktop)
+md5sums=('3417a59b0483232da8fff7d798919615'
+         '01ba72987ef39a874d2787f26ffe9f49')
 
 build() {
-  cd ${srcdir}/${_pkgname}-${pkgver}
+  cd "$srcdir/$_name-$pkgver"
+  LDFLAGS+=" -ldl" \
   ./configure --prefix=/usr
   make
 }
 
 package() {
-  cd ${srcdir}/${_pkgname}-${pkgver}
+  cd "$srcdir/$_name-$pkgver"
+  make DESTDIR="$pkgdir/" install
 
-  make DESTDIR=${pkgdir} install
+  # desktop file
+  install -Dm644 ../$pkgname.desktop \
+    "$pkgdir/usr/share/applications/$pkgname.desktop"
+
+  # icon
+  install -Dm644 pixmaps/logo-jackeq-s.png \
+    "$pkgdir/usr/share/pixmaps/$pkgname.png"
 }
