@@ -1,0 +1,9 @@
+[Desktop Entry]
+Name=JackEQ
+Comment=Equalize your JACK I/O
+Exec=jackeq
+Icon=jackeq
+Terminal=false
+Type=Application
+StartupNotify=true
+Categories=GTK;GNOME;AudioVideo;Player;Audio;
