@@ -16,6 +16,10 @@ md5sums=('468da8a353c2ea4936eb92d71403c960')
 
 build() {
   cd "$srcdir/$_name-$pkgver"
+
+  # cython 0.16 fix
+  sed -i "s/&self/self/" kivy/graphics/fbo.pyx
+
   python2 setup.py build
 }
 
