@@ -3,7 +3,7 @@
 # Contributor: TDY <tdy@gmx.com>
 
 pkgname=shutter
-pkgver=0.88.2
+pkgver=0.88.3
 pkgrel=1
 pkgdesc="A featureful screenshot tool (formerly gscrot)"
 arch=('i686' 'x86_64')
@@ -23,7 +23,7 @@ optdepends=(
 	#'perl-gtk2-trayicon: Only if you using a gtk2 lower than 2.10.x'
 )
 source=("http://shutter-project.org/wp-content/uploads/releases/tars/$pkgname-$pkgver.tar.gz")
-md5sums=('d4f42b734d99517ac5b9d21449b89790')
+md5sums=('8389f7c53ecb156c499475ae7800f7ae')
 
 build() {
 	cd "$srcdir/$pkgname-$pkgver"
