@@ -1,0 +1,26 @@
+# Maintainer: Thomas Weißschuh <thomas_weissschuh lavabit com>
+
+pkgname=ttf-lato
+pkgver=1.104
+pkgrel=1
+pkgdesc='a sanserif type­face family'
+url="http://www.latofonts.com/lato-free-fonts/"
+license=('custom:OFL')
+arch=('any')
+depends=('fontconfig' 'xorg-fonts-encodings' 'xorg-font-utils')
+source=("${pkgname}-${pkgver}::http://www.latofonts.com/download/LatoOFL.zip"
+        'install')
+
+install=install
+
+build() {
+	cd "${srcdir}"
+	install -dm755 "${pkgdir}"/usr/share/fonts/TTF
+	install -m644 *.ttf "${pkgdir}"/usr/share/fonts/TTF
+
+	install -Dm644 OFL.txt "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+	install -Dm644 README.txt "${pkgdir}/usr/share/doc/${pkgname}/README.txt"
+	install -dm755 "${pkgdir}/usr/share/doc/${pkgname}/"
+}
+sha1sums=('54c7f9ca1fc36ad7f9c7d24e65e16afb026b3a24'
+          '62028e537a7ea090781b5effabd91ba5e946eb75')
