@@ -1,0 +1,13 @@
+post_install() {
+	fc-cache -s -f > /dev/null
+	mkfontscale usr/share/fonts/TTF
+	mkfontdir usr/share/fonts/TTF
+}
+
+post_upgrade() {
+	post_install
+}
+
+post_remove() {
+	post_install
+}
