@@ -1,3 +1,5 @@
+Version 20120505
+ * Makedependencies: glmath -> glm
 Version 20120412
  * Use TinyXML of the system, add it as dependency.
 Version 20120405
